# pipespectrum

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.sample.yaml  pipespectrum.desktop
include/: AudioCapture.h  Config.h  FFTAnalyzer.h  Renderer.h  SpectrumMeter.h  icon_data.h
src/: AudioCapture.cpp  Config.cpp  FFTAnalyzer.cpp  Renderer.cpp  SpectrumMeter.cpp  main.cpp
